--- a/canvas/canvas2d/package.json
+++ b/canvas/canvas2d/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^3.6.5",
     "fabric": "^4.6.0",
+    "qrcodejs2": "0.0.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.12"
   },
@@ -34,7 +35,14 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "no-debugger": "off",
+      "no-console": "off",
+      "generator-star-spacing": "off",
+      "no-tabs": "off",
+      "no-unused-vars": "off",
+      "no-irregular-whitespace": "off"
+    }
   },
   "browserslist": [
     "> 1%",
