--- a/canvas/canvas2d/package.json
+++ b/canvas/canvas2d/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "element-plus": "^1.2.0-beta.6",
     "fabric": "^4.6.0",
     "qrcodejs2": "0.0.2",
     "vue": "^3.0.0",
@@ -21,7 +22,9 @@
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "sass": "^1.45.1",
+    "sass-loader": "^10.2.0"
   },
   "eslintConfig": {
     "root": true,
