--- a/vue-more-module/package.json
+++ b/vue-more-module/package.json
@@ -29,6 +29,7 @@
     "vue-property-decorator": "^8.4.1",
     "vue-router": "^3.1.6",
     "vue-rx": "^6.2.0",
+    "vue3-konva": "^2.1.7",
     "vuex": "^3.1.3",
     "vuex-module-decorators": "^0.17.0"
   },
