--- a/canvas/canvas2d/package.json
+++ b/canvas/canvas2d/package.json
@@ -9,11 +9,17 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "dplayer": "^1.26.0",
     "element-plus": "^1.2.0-beta.6",
     "fabric": "^4.6.0",
+    "flv.js": "^1.6.2",
     "qrcodejs2": "0.0.2",
+    "video.js": "^7.18.1",
+    "videojs-flvjs-es6": "^1.0.1",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.12"
+    "vue-plyr": "^7.0.0",
+    "vue-router": "^4.0.12",
+    "vue3-video-play": "^1.3.1-beta.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -27,7 +33,7 @@
     "sass-loader": "^10.2.0"
   },
   "eslintConfig": {
-    "root": true,
+    "root": false,
     "env": {
       "node": true
     },
